bunch of stuff now its goodnight

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "ngx-bootstrap": "^10.2.0",
     "postcss-cli": "^10.1.0",
